# cps-obs

./: BENCHMARK.md  LICENSE  Main.hs  README.md  config.yaml.linux  config.yaml.mac  config.yaml.windows  cpp-obs.cabal  cps-obs.cabal  ideas.txt
Language/C/Obfuscate/: .#CPS.hs  .#SSA.hs  ASTUtils.hs  CFF.hs  CFG.hs  CPS.hs  CPS_old.hs  Desugar.hs  SSA.hs  Var.hs  test.hs
references/: 0311.ppt  urls.txt
test/: Out.hs  Test.hs  TestLangC.hs  arrayinitlist.c  ast.c  break.c  bst.c  comma_exp.c  config.yaml  conflict_def.c  const.c  deref_pointer.c  empty_block.c  emptythen.c  fib.c  fibiter.c  func_call.c  goto.c  helloworld.cpp  lastfor.c  lastwhile.c  linkedlist.c  local_array.c  local_init.c  multi_decl.c  noreturn.c  pluseq.c  pointer_result_type.c  postinc.c  python_ast_config.yaml  python_ast_config.yaml.ubuntu  scoped_dup_var.c  search.c  sort.c  static_inline.c  static_nonstatic.c  struct.c  switch.c  test.c  test.cpp  (+4 more)
